space validate and add url in data project

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="dark scroll-smooth [--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem]">
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta property="title" content="Hi, I&#x27;m Bima Arifa - Bima Arifa Portfolio" />
+  <meta property="og:title" content="Hi, I&#x27;m Bima Arifa - Bima Arifa Portfolio" />
+  <meta name="description" property="description"
+    content="Bima Arifa Personal Portfolio Website, Blog, Project Showcase, and My Experience History." />
+  <meta name="description" property="og:description"
+    content="Bima Arifa Personal Portfolio Website, Blog, Project Showcase, and My Experience History." />
+  <meta name="url" property="og:url" content="https://bimarf.in" />
+  <meta name="author" content="@bimaarf_ instagram">
+  <meta name="keywords" content="bimarf, bimaarifa, bimaarf">
+  <link rel="apple-touch-icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <meta property="og:image" content="https://api-porto.bimarf.in/image/experiences_image/portofolio.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" type="image/png" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" sizes="32x32" />
+  <link rel="icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" sizes="192x192" />
+  <link rel="apple-touch-icon-precomposed" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png">
+  <meta name="msapplication-TileImage" content="https://api-porto.bimarf.in/image/experiences_image/portofolio.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <meta name="twitter:image" content="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <style>
@@ -23,7 +42,7 @@
       background-color: rgb(15 23 42);
     }
   </style>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-slate-900">
