add change theme

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark scroll-smooth [--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem]">
+<html lang="en" class=" scroll-smooth [--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem] dark">
 
 <head>
   <meta charset="utf-8" />
@@ -14,10 +14,14 @@
   <meta name="keywords" content="bimarf, bimaarifa, bimaarf">
   <link rel="apple-touch-icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
   <meta property="og:image" content="https://api-porto.bimarf.in/image/experiences_image/portofolio.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" type="image/png" sizes="16x16"
+    href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" type="image/png" sizes="96x96"
+    href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
+  <link rel="icon" type="image/png" sizes="192x192"
+    href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
   <link rel="icon" type="image/png" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
   <link rel="icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" sizes="32x32" />
   <link rel="icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" sizes="192x192" />
@@ -45,7 +49,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-slate-900">
+<body class="bg-white dark:bg-gray-900">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <button id="to-top-button" onclick="goToTop()" title="Go To Top"
