--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class=" scroll-smooth [--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem] dark">
+<html lang="en" class="dark scroll-smooth [--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem]">
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="title" content="Hi, I&#x27;m Bima Arifa - Bima Arifa Portfolio" />
   <meta property="og:title" content="Hi, I&#x27;m Bima Arifa - Bima Arifa Portfolio" />
   <meta name="description" property="description"
@@ -12,27 +14,11 @@
   <meta name="url" property="og:url" content="https://bimarf.in" />
   <meta name="author" content="@bimaarf_ instagram">
   <meta name="keywords" content="bimarf, bimaarifa, bimaarf">
-  <link rel="apple-touch-icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <meta property="og:image" content="https://api-porto.bimarf.in/image/experiences_image/portofolio.png">
-  <link rel="icon" type="image/png" sizes="16x16"
-    href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <link rel="icon" type="image/png" sizes="32x32"
-    href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <link rel="icon" type="image/png" sizes="96x96"
-    href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <link rel="icon" type="image/png" sizes="192x192"
-    href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <link rel="icon" type="image/png" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <link rel="icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" sizes="32x32" />
-  <link rel="icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" sizes="192x192" />
-  <link rel="apple-touch-icon-precomposed" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png">
-  <meta name="msapplication-TileImage" content="https://api-porto.bimarf.in/image/experiences_image/portofolio.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
-  <meta name="twitter:image" content="https://api-porto.bimarf.in/image/experiences_image/portofolio.png" />
   <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
   <style>
     /* CSS only for demo purpose*/
     #btn-back-to-top {
